--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
-    <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0;url=site/index.html">
+    <meta charset="utf-8"/>
+    <meta http-equiv="refresh" content="0;url=site/index.html"/>
 </html>
