--- a/site/channels.html
+++ b/site/channels.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
 
-  <link rel="shortcut icon" type="image/x-icon" href="../site/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 
   
-  <link rel="stylesheet" type="text/css" media="(orientation: landscape)" href="../site/landscape.css" />
+  <link rel="stylesheet" type="text/css" media="(orientation: landscape)" href="landscape.css" />
 
   
-  <link rel="stylesheet" type="text/css" media="(orientation: portrait)" href="../site/portrait.css" />
+  <link rel="stylesheet" type="text/css" media="(orientation: portrait)" href="portrait.css" />
 
   <link rel="stylesheet" href="../highlightjs/styles/default.css" />
 
@@ -19,7 +19,7 @@
   <script>hljs.initHighlightingOnLoad();</script>
 
   
-  <script src="../site/linkify.js"> </script>
+  <script src="linkify.js"> </script>
 
   <title>Channels</title>
 </head>
@@ -30,7 +30,7 @@
   <table class="navigate">
     <tr>
       <td align="left">
-        <a href="../site/posts.html">Posts</a>
+        <a href="posts.html">Posts</a>
       </td>
       <td align="center">
         <a href="https://www.github.com/dgoffredo">About</a>
@@ -48,7 +48,7 @@
 <div class="table-of-contents"><ul><li><a href="#channels">Channels</a><ul><li><a href="#motivation">Motivation</a></li><li><a href="#select">select(...)</a></li><li><a href="#concurrent_ml">Concurrent ML</a></li><li><a href="#events">Events</a></li><li><a href="#the_original_channel_design">The Original Channel Design</a></li><li><a href="#the_new_channel_design">The New Channel Design</a></li><li><a href="#selectondestroy">selectOnDestroy</a></li><li><a href="#error_handling">Error Handling</a></li><li><a href="#supporting_c98_sucks_without_boost">Supporting C++98 Sucks Without Boost</a></li><li><a href="#more">More</a></li></ul></li></ul></div>
 
 <h1 id="channels">Channels</h1>
-<p><img src="../site/chan.png" alt="" /></p>
+<p><img src="chan.png" alt="" /></p>
 <p>I implemented <a href="https://github.com/dgoffredo/chan">Go-style channels and select</a> in C++. The need doesn't
 arise often, but when it does, it's frustrating not to be able to multiplex
 operations easily.</p>
@@ -276,7 +276,7 @@ Here's one possible interleaving that causes a deadlock.</p>
 </tr>
 </tbody>
 </table>
-<p><img src="../site/sad-panda.png" alt="" /></p>
+<p><img src="sad-panda.png" alt="" /></p>
 <p>For comparison, what happens more often is the following:</p>
 <table>
 <thead><tr>
@@ -314,7 +314,7 @@ Here's one possible interleaving that causes a deadlock.</p>
 </tr>
 </tbody>
 </table>
-<p><img src="../site/happy-panda.png" alt="" /></p>
+<p><img src="happy-panda.png" alt="" /></p>
 <p>Here there's no deadlock; instead, <em>chan1</em> "won the race."  How can I avoid the
 deadlocking case?</p>
 <p>No amount of protocol tweaking is enough to fix this problem.  In order to have
@@ -777,7 +777,7 @@ library, I think that it's justified.</p>
   <table class="navigate">
     <tr>
       <td align="left">
-        <a href="../site/posts.html">Posts</a>
+        <a href="posts.html">Posts</a>
       </td>
       <td align="center">
         <a href="https://www.github.com/dgoffredo">About</a>
