--- a/site/europe1.html
+++ b/site/europe1.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
 
-  <link rel="shortcut icon" type="image/x-icon" href="../site/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 
   
-  <link rel="stylesheet" type="text/css" media="(orientation: landscape)" href="../site/landscape.css" />
+  <link rel="stylesheet" type="text/css" media="(orientation: landscape)" href="landscape.css" />
 
   
-  <link rel="stylesheet" type="text/css" media="(orientation: portrait)" href="../site/portrait.css" />
+  <link rel="stylesheet" type="text/css" media="(orientation: portrait)" href="portrait.css" />
 
   <link rel="stylesheet" href="../highlightjs/styles/default.css" />
 
@@ -19,7 +19,7 @@
   <script>hljs.initHighlightingOnLoad();</script>
 
   
-  <script src="../site/linkify.js"> </script>
+  <script src="linkify.js"> </script>
 
   <title>Europe, Day 1</title>
 </head>
@@ -30,7 +30,7 @@
   <table class="navigate">
     <tr>
       <td align="left">
-        <a href="../site/posts.html">Posts</a>
+        <a href="posts.html">Posts</a>
       </td>
       <td align="center">
         <a href="https://www.github.com/dgoffredo">About</a>
@@ -48,7 +48,7 @@
 <div class="table-of-contents"><ul><li><a href="#europe_day_1">Europe, Day 1</a></li></ul></div>
 
 <h1 id="europe_day_1">Europe, Day 1</h1>
-<p><img src="../site/vineet_ice_small.jpg" alt="" />
+<p><img src="vineet_ice_small.jpg" alt="" />
 <em>Vineet copes with the low coefficient of friction in Iceland.</em></p>
 <p>Morning from the North,</p>
 <p>Vineet and I got in just before midnight Iceland time last night. Immigration
@@ -74,11 +74,11 @@ is a more expensive word for gasoline.</p>
   <tr><th colspan="6">Europe</th></tr>
   <tr>
     <td>Day 1</td>
-    <td><a href="../site/europe2.html">Day 2</a></td>
-    <td><a href="../site/europe7.html">Day 7</a></td>
-    <td><a href="../site/europe8.html">Day 8</a></td>
-    <td><a href="../site/europe10.html">Day 10</a></td>
-    <td><a href="../site/europe13.html">Day 13</a></td>
+    <td><a href="europe2.html">Day 2</a></td>
+    <td><a href="europe7.html">Day 7</a></td>
+    <td><a href="europe8.html">Day 8</a></td>
+    <td><a href="europe10.html">Day 10</a></td>
+    <td><a href="europe13.html">Day 13</a></td>
   </tr>
 </table>
 
@@ -86,7 +86,7 @@ is a more expensive word for gasoline.</p>
   <table class="navigate">
     <tr>
       <td align="left">
-        <a href="../site/posts.html">Posts</a>
+        <a href="posts.html">Posts</a>
       </td>
       <td align="center">
         <a href="https://www.github.com/dgoffredo">About</a>
