--- a/site/europe2.html
+++ b/site/europe2.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
 
-  <link rel="shortcut icon" type="image/x-icon" href="../site/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 
   
-  <link rel="stylesheet" type="text/css" media="(orientation: landscape)" href="../site/landscape.css" />
+  <link rel="stylesheet" type="text/css" media="(orientation: landscape)" href="landscape.css" />
 
   
-  <link rel="stylesheet" type="text/css" media="(orientation: portrait)" href="../site/portrait.css" />
+  <link rel="stylesheet" type="text/css" media="(orientation: portrait)" href="portrait.css" />
 
   <link rel="stylesheet" href="../highlightjs/styles/default.css" />
 
@@ -19,7 +19,7 @@
   <script>hljs.initHighlightingOnLoad();</script>
 
   
-  <script src="../site/linkify.js"> </script>
+  <script src="linkify.js"> </script>
 
   <title>Europe, Day 2</title>
 </head>
@@ -30,7 +30,7 @@
   <table class="navigate">
     <tr>
       <td align="left">
-        <a href="../site/posts.html">Posts</a>
+        <a href="posts.html">Posts</a>
       </td>
       <td align="center">
         <a href="https://www.github.com/dgoffredo">About</a>
@@ -61,30 +61,30 @@ phone.</p>
 setting behind this sort of wall of stone, and the picture really doesn't do
 it justice. The setting sunlight painted the structures gold, LIKE THE HALLS
 OF VALHALLA!!!</p>
-<p><img src="../site/europe2-1_small.jpg" alt="" /></p>
+<p><img src="europe2-1_small.jpg" alt="" /></p>
 <p>You really would need multiple exposures combined to see what it looked
 like.</p>
 <p>Anyway, strange rocks:</p>
-<p><img src="../site/europe2-2_small.jpg" alt="" /></p>
+<p><img src="europe2-2_small.jpg" alt="" /></p>
 <p>This is what Vineet looks like when he's not falling to his death:</p>
-<p><img src="../site/europe2-3_small.jpg" alt="" /></p>
+<p><img src="europe2-3_small.jpg" alt="" /></p>
 <p>Mountains in the distance to your right (where the glacier is) and the ocean
 to your left:</p>
 <p><a href="https://drive.google.com/open?id=0B6rp2WsQNNAlVzVVOTBTWjVXTW8">https://drive.google.com/open?id=0B6rp2WsQNNAlVzVVOTBTWjVXTW8</a></p>
 <p>And did I mention yesterday? No? Well that involved energy drinks,</p>
-<p><img src="../site/europe2-4_small.jpg" alt="" /></p>
+<p><img src="europe2-4_small.jpg" alt="" /></p>
 <p>geothermal ejaculation,</p>
-<p><img src="../site/europe2-5_small.jpg" alt="" />
+<p><img src="europe2-5_small.jpg" alt="" />
 <em>[2020 note: this picture was cropped badly due to file corruption.]</em></p>
 <p>waterfalls,</p>
-<p><img src="../site/europe2-6_small.jpg" alt="" />
+<p><img src="europe2-6_small.jpg" alt="" />
 <em>[2020 note: this picture was cropped badly due to file corruption.]</em></p>
 <p>a lake formed in a volcanic crater,</p>
-<p><img src="../site/europe2-7_small.jpg" alt="" />
+<p><img src="europe2-7_small.jpg" alt="" />
 <em>[2020 note: this picture was cropped badly due to file corruption.]</em></p>
 <p>and sometimes climbing to the top of a hill to sit and listen to the creek
 and look at the horses.</p>
-<p><img src="../site/europe2-8_small.jpg" alt="" />
+<p><img src="europe2-8_small.jpg" alt="" />
 <em>[2020 note: this picture was cropped badly due to file corruption.]</em></p>
 <p>We're at a hostel-like hotel in "Hella" now after having gone to "Vik" for
 dinner. Cod stew. Tomorrow we drive over towards the airport to stay at the
@@ -92,8 +92,8 @@ Blue Lagoon, which is a spa. Maybe I'll drop 100 euros on a massage. Then
 another Airbnb near there and off to the airport Tuesday to return the car,
 and then we're LONDON BOUND.</p>
 <p>You want to see more cats? Me too:</p>
-<p><img src="../site/europe2-9_small.jpg" alt="" /></p>
-<p><img src="../site/europe2-10_small.jpg" alt="" />
+<p><img src="europe2-9_small.jpg" alt="" /></p>
+<p><img src="europe2-10_small.jpg" alt="" />
 <em>[2020 note: these pictures are cropped badly due to file corruption.]</em> <br />
 <em>[2020 note: my God, look at the cock on that one.]</em></p>
 <p>These are the true Icelanders. The humans are kept alive only to act as
@@ -101,12 +101,12 @@ caretakers in their intergalactic communist utopia.</p>
 <table class="series">
   <tr><th colspan="6">Europe</th></tr>
   <tr>
-    <td><a href="../site/europe1.html">Day 1</a></td>
+    <td><a href="europe1.html">Day 1</a></td>
     <td>Day 2</td>
-    <td><a href="../site/europe7.html">Day 7</a></td>
-    <td><a href="../site/europe8.html">Day 8</a></td>
-    <td><a href="../site/europe10.html">Day 10</a></td>
-    <td><a href="../site/europe13.html">Day 13</a></td>
+    <td><a href="europe7.html">Day 7</a></td>
+    <td><a href="europe8.html">Day 8</a></td>
+    <td><a href="europe10.html">Day 10</a></td>
+    <td><a href="europe13.html">Day 13</a></td>
   </tr>
 </table>
 
@@ -114,7 +114,7 @@ caretakers in their intergalactic communist utopia.</p>
   <table class="navigate">
     <tr>
       <td align="left">
-        <a href="../site/posts.html">Posts</a>
+        <a href="posts.html">Posts</a>
       </td>
       <td align="center">
         <a href="https://www.github.com/dgoffredo">About</a>
