--- a/site/mexico5.html
+++ b/site/mexico5.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
 
-  <link rel="shortcut icon" type="image/x-icon" href="../site/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 
   
-  <link rel="stylesheet" type="text/css" media="(orientation: landscape)" href="../site/landscape.css" />
+  <link rel="stylesheet" type="text/css" media="(orientation: landscape)" href="landscape.css" />
 
   
-  <link rel="stylesheet" type="text/css" media="(orientation: portrait)" href="../site/portrait.css" />
+  <link rel="stylesheet" type="text/css" media="(orientation: portrait)" href="portrait.css" />
 
   <link rel="stylesheet" href="../highlightjs/styles/default.css" />
 
@@ -19,7 +19,7 @@
   <script>hljs.initHighlightingOnLoad();</script>
 
   
-  <script src="../site/linkify.js"> </script>
+  <script src="linkify.js"> </script>
 
   <title>Mexico, Day 29</title>
 </head>
@@ -30,7 +30,7 @@
   <table class="navigate">
     <tr>
       <td align="left">
-        <a href="../site/posts.html">Posts</a>
+        <a href="posts.html">Posts</a>
       </td>
       <td align="center">
         <a href="https://www.github.com/dgoffredo">About</a>
@@ -48,7 +48,7 @@
 <div class="table-of-contents"><ul><li><a href="#mexico_day_29">Mexico, Day 29</a></li></ul></div>
 
 <h1 id="mexico_day_29">Mexico, Day 29</h1>
-<p><img src="../site/mexico_49_small.jpg" alt="" /> </p>
+<p><img src="mexico_49_small.jpg" alt="" /> </p>
 <p>If you zoom in (click), you can see a horse above the third post from the left,
 in the center of the image.  My first few days in Aguascalientes, this horse
 shamelessly presented itself near the fence.  I'll take a picture another day,
@@ -60,49 +60,49 @@ can't help but wonder what might have been.</p>
 from the tarmac.  When I first arrived, there was a beautiful sunset behind the
 mountains on the horizon past the runway, but in my fluster I didn't photograph
 it.  This time around all we get is a view of the dusty distance.</p>
-<p><img src="../site/mexico_50_small.jpg" alt="" /> </p>
+<p><img src="mexico_50_small.jpg" alt="" /> </p>
 <p>As compensation, here is another sunset.</p>
-<p><img src="../site/mexico_52_small.jpg" alt="" /> </p>
+<p><img src="mexico_52_small.jpg" alt="" /> </p>
 <p>I invited Grace's parents over to the Airbnb for dinner.  Here we are having a
 dessert of pineapple and mango with chamoy and tajín.  The main course was
 again Grace's sun-dried tomato chicken and roasted potatoes, and my chicken
 stew.  This time I put a little wine in the soup; I think it worked well.</p>
-<p><img src="../site/mexico_53_small.jpg" alt="" /> </p>
-<p><img src="../site/mexico_54_small.jpg" alt="" /> </p>
-<p><img src="../site/mexico_55_small.jpg" alt="" /> </p>
+<p><img src="mexico_53_small.jpg" alt="" /> </p>
+<p><img src="mexico_54_small.jpg" alt="" /> </p>
+<p><img src="mexico_55_small.jpg" alt="" /> </p>
 <p>Grace saved the street food for the end of the trip.  Last night we went
 driving in search of "street corn," or "elote," or "chascas."  Because it was a
 notable historical figure's birthday, and because it was Sunday, most of the
 street corn vendors were closed.  But not this one.</p>
-<p><img src="../site/mexico_56_small.jpg" alt="" /> </p>
+<p><img src="mexico_56_small.jpg" alt="" /> </p>
 <p>I ordered... something.  It looks kind of like what I imagine the inside of an
 animal looks like.</p>
-<p><img src="../site/mexico_57_small.jpg" alt="" /> </p>
+<p><img src="mexico_57_small.jpg" alt="" /> </p>
 <p>It's primarily corn, but there's also cheese and bacon and mushrooms and stuff
 <em>there's so much stuff</em>.</p>
 <p>As if that weren't enough (Grace got a smaller dish), we ordered tacos when we
 got back home.</p>
-<p><img src="../site/mexico_58_small.jpg" alt="" /> </p>
-<p><img src="../site/mexico_59_small.jpg" alt="" /> </p>
-<p><img src="../site/mexico_60_small.jpg" alt="" /> </p>
+<p><img src="mexico_58_small.jpg" alt="" /> </p>
+<p><img src="mexico_59_small.jpg" alt="" /> </p>
+<p><img src="mexico_60_small.jpg" alt="" /> </p>
 <p>Tacos!</p>
 <p>That's about it.  I checked my bag this time, because it now contains a cast
 iron skillet (never leave a soldier behind) and a bottle of tequila.  Since you
 were wondering, here's the accumulation of a month's worth of grocery
 shopping.</p>
-<p><img src="../site/mexico_61_small.jpg" alt="" /> </p>
+<p><img src="mexico_61_small.jpg" alt="" /> </p>
 <p>I kept the skillet and the tequila glasses, but the rest is for the next guy.
 Except the pepper.  Grace's mom got the pepper.</p>
 <p>We in no way finished the puzzle.</p>
-<p><img src="../site/mexico_62_small.jpg" alt="" /> </p>
+<p><img src="mexico_62_small.jpg" alt="" /> </p>
 <p>Ahora, a Nueva York.</p>
 <table class="series">
   <tr><th colspan="5">Mexico</th></tr>
   <tr>
-    <td><a href="../site/mexico1.html">Day 5</a></td>
-    <td><a href="../site/mexico2.html">Day 8</a></td>
-    <td><a href="../site/mexico3.html">Day 13</a></td>
-    <td><a href="../site/mexico4.html">Day 21</a></td>
+    <td><a href="mexico1.html">Day 5</a></td>
+    <td><a href="mexico2.html">Day 8</a></td>
+    <td><a href="mexico3.html">Day 13</a></td>
+    <td><a href="mexico4.html">Day 21</a></td>
     <td>Day 29</td>
   </tr>
 </table>
@@ -111,7 +111,7 @@ Except the pepper.  Grace's mom got the pepper.</p>
   <table class="navigate">
     <tr>
       <td align="left">
-        <a href="../site/posts.html">Posts</a>
+        <a href="posts.html">Posts</a>
       </td>
       <td align="center">
         <a href="https://www.github.com/dgoffredo">About</a>
