--- a/site/russia1.html
+++ b/site/russia1.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
 
-  <link rel="shortcut icon" type="image/x-icon" href="../site/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 
   
-  <link rel="stylesheet" type="text/css" media="(orientation: landscape)" href="../site/landscape.css" />
+  <link rel="stylesheet" type="text/css" media="(orientation: landscape)" href="landscape.css" />
 
   
-  <link rel="stylesheet" type="text/css" media="(orientation: portrait)" href="../site/portrait.css" />
+  <link rel="stylesheet" type="text/css" media="(orientation: portrait)" href="portrait.css" />
 
   <link rel="stylesheet" href="../highlightjs/styles/default.css" />
 
@@ -19,7 +19,7 @@
   <script>hljs.initHighlightingOnLoad();</script>
 
   
-  <script src="../site/linkify.js"> </script>
+  <script src="linkify.js"> </script>
 
   <title>Russia and Czechia, Day 3</title>
 </head>
@@ -30,7 +30,7 @@
   <table class="navigate">
     <tr>
       <td align="left">
-        <a href="../site/posts.html">Posts</a>
+        <a href="posts.html">Posts</a>
       </td>
       <td align="center">
         <a href="https://www.github.com/dgoffredo">About</a>
@@ -79,8 +79,8 @@ parties of Russian politics. Russian politicians on holiday, so no meet
 Russian politicians. Pasha translate for American. Vladimir has much hair in
 nose. He look like tooth brush! Tooth brush know much of Russian political
 history. Pasha translate whole history for American.</p>
-<p><img src="../site/russia1-9_small.jpg" alt="" /></p>
-<p><img src="../site/russia1-7_small.jpg" alt="" /></p>
+<p><img src="russia1-9_small.jpg" alt="" /></p>
+<p><img src="russia1-7_small.jpg" alt="" /></p>
 <p>In Duma we eat lunch in cafeteria, and there is much to eat. Then we have
 tea in cafe. American have trouble staying awake in Russian conversation,
 but only Pasha notice.</p>
@@ -98,11 +98,11 @@ Red Square, where American take pictures. The sun is setting and it is very
 pretty. There are many tourists. Then we go to fast food Russian pancakes
 and then to outside bar cafe. Beer cost New York prices near tourist area.
 Pasha says before exchange collapse, Moscow very expensive city.</p>
-<p><img src="../site/russia1-14_small.jpg" alt="" /></p>
-<p><img src="../site/russia1-11_small.jpg" alt="" /></p>
-<p><img src="../site/russia1-2_small.jpg" alt="" /></p>
-<p><img src="../site/russia1-12_small.jpg" alt="" /></p>
-<p><img src="../site/russia1-15_small.jpg" alt="" /></p>
+<p><img src="russia1-14_small.jpg" alt="" /></p>
+<p><img src="russia1-11_small.jpg" alt="" /></p>
+<p><img src="russia1-2_small.jpg" alt="" /></p>
+<p><img src="russia1-12_small.jpg" alt="" /></p>
+<p><img src="russia1-15_small.jpg" alt="" /></p>
 <p>Then we walk to famous street in Moscow, like La Rambla in Barcelona. It
 long walk to get there, but we pee before so no problem. There we find fancy
 beer bar, and have fancy beer. Young group sit at table next to American and
@@ -153,9 +153,9 @@ university building, big building. We can no enter building without pass,
 and cannot get pass, so we walk around campus. Moscow State University have
 very nice campus. Pasha tell American next time Pasha in Moscow, he stay
 near university.</p>
-<p><img src="../site/russia1-6_small.jpg" alt="" /></p>
-<p><img src="../site/russia1-4_small.jpg" alt="" /></p>
-<p><img src="../site/russia1-10_small.jpg" alt="" /></p>
+<p><img src="russia1-6_small.jpg" alt="" /></p>
+<p><img src="russia1-4_small.jpg" alt="" /></p>
+<p><img src="russia1-10_small.jpg" alt="" /></p>
 <p>Gregory buy everyone business lunch at restaurant near campus. American and
 Pasha have rubles, but Gregory insist. Gregory order for American all
 classic Russian foods. Then we walk back to car and drop off Natalie.
@@ -174,13 +174,13 @@ go to observation and take pictures, and have beer in cafe. American like
 view from tower. Many good picture of sun setting from tower. After tower,
 Gregory return with machina and take us back to flat of Ella. American very
 tired and we sleep.</p>
-<p><img src="../site/russia1-5_small.jpg" alt="" /></p>
-<p><img src="../site/russia1-16_small.jpg" alt="" /></p>
-<p><img src="../site/russia1-13_small.jpg" alt="" /></p>
-<p><img src="../site/russia1-1_small.jpg" alt="" /></p>
-<p><img src="../site/russia1-17_small.jpg" alt="" /></p>
-<p><img src="../site/russia1-8_small.jpg" alt="" /></p>
-<p><img src="../site/russia1-3_small.jpg" alt="" /></p>
+<p><img src="russia1-5_small.jpg" alt="" /></p>
+<p><img src="russia1-16_small.jpg" alt="" /></p>
+<p><img src="russia1-13_small.jpg" alt="" /></p>
+<p><img src="russia1-1_small.jpg" alt="" /></p>
+<p><img src="russia1-17_small.jpg" alt="" /></p>
+<p><img src="russia1-8_small.jpg" alt="" /></p>
+<p><img src="russia1-3_small.jpg" alt="" /></p>
 <p>Pasha and American sleep almost twelve hours! American wake up and start
 writing log of travels. Now it 2 PM and Ella come home from work for lunch. До
 связи!</p>
@@ -188,9 +188,9 @@ writing log of travels. Now it 2 PM and Ella come home from work for lunch. До
   <tr><th colspan="4">Russia and Czechia</th></tr>
   <tr>
     <td>Day 3</td>
-    <td><a href="../site/russia2.html">Day 4</a></td>
-    <td><a href="../site/russia7.html">Day 7</a></td>
-    <td><a href="../site/russia10.html">Day 10</a></td>
+    <td><a href="russia2.html">Day 4</a></td>
+    <td><a href="russia7.html">Day 7</a></td>
+    <td><a href="russia10.html">Day 10</a></td>
   </tr>
 </table>
 
@@ -198,7 +198,7 @@ writing log of travels. Now it 2 PM and Ella come home from work for lunch. До
   <table class="navigate">
     <tr>
       <td align="left">
-        <a href="../site/posts.html">Posts</a>
+        <a href="posts.html">Posts</a>
       </td>
       <td align="center">
         <a href="https://www.github.com/dgoffredo">About</a>
