--- a/site/russia2.html
+++ b/site/russia2.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
 
-  <link rel="shortcut icon" type="image/x-icon" href="../site/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 
   
-  <link rel="stylesheet" type="text/css" media="(orientation: landscape)" href="../site/landscape.css" />
+  <link rel="stylesheet" type="text/css" media="(orientation: landscape)" href="landscape.css" />
 
   
-  <link rel="stylesheet" type="text/css" media="(orientation: portrait)" href="../site/portrait.css" />
+  <link rel="stylesheet" type="text/css" media="(orientation: portrait)" href="portrait.css" />
 
   <link rel="stylesheet" href="../highlightjs/styles/default.css" />
 
@@ -19,7 +19,7 @@
   <script>hljs.initHighlightingOnLoad();</script>
 
   
-  <script src="../site/linkify.js"> </script>
+  <script src="linkify.js"> </script>
 
   <title>Russia and Czechia, Day 4</title>
 </head>
@@ -30,7 +30,7 @@
   <table class="navigate">
     <tr>
       <td align="left">
-        <a href="../site/posts.html">Posts</a>
+        <a href="posts.html">Posts</a>
       </td>
       <td align="center">
         <a href="https://www.github.com/dgoffredo">About</a>
@@ -57,8 +57,8 @@ drove around until we ended up at the Chruch of Christ the Savior. The plan
 was to check out the church and then to take a short boat trip along the
 Moscow river, but I'm guessing that the schedules did not align, so instead
 we did just the boat ride, which was nice.</p>
-<p><img src="../site/russia2-1_small.jpg" alt="" /></p>
-<p><img src="../site/russia2-4_small.jpg" alt="" /></p>
+<p><img src="russia2-1_small.jpg" alt="" /></p>
+<p><img src="russia2-4_small.jpg" alt="" /></p>
 <p>After that, the sun was beginning to set, and we drove to a theater across
 the river from "Moscow City," which is the skyscraping financial district of
 Moscow. None of the buildings there are much more than ten years old. Since
@@ -67,8 +67,8 @@ a skyscraper would have been built only if a bureau decided to build one,
 which I'm guessing would have been an excessive expenditure. I always had
 assumed that any sufficiently large hub of industry and urbanity would have
 a district of tall buildings, but not in the Soviet Union.</p>
-<p><img src="../site/russia2-3_small.jpg" alt="" /></p>
-<p><img src="../site/russia2-2_small.jpg" alt="" /></p>
+<p><img src="russia2-3_small.jpg" alt="" /></p>
+<p><img src="russia2-2_small.jpg" alt="" /></p>
 <p>A relative of Gregory's (and Pasha's) works as chief engineer at the
 theater. We met him at the theater to mooch off of the employees' cafeteria
 for dinner as it was closing – chicken soup and "Navy macaroni," and tea, of
@@ -88,10 +88,10 @@ tanks. Cheerio!</p>
 <table class="series">
   <tr><th colspan="4">Russia and Czechia</th></tr>
   <tr>
-    <td><a href="../site/russia1.html">Day 3</a></td>
+    <td><a href="russia1.html">Day 3</a></td>
     <td>Day 4</td>
-    <td><a href="../site/russia7.html">Day 7</a></td>
-    <td><a href="../site/russia10.html">Day 10</a></td>
+    <td><a href="russia7.html">Day 7</a></td>
+    <td><a href="russia10.html">Day 10</a></td>
   </tr>
 </table>
 
@@ -99,7 +99,7 @@ tanks. Cheerio!</p>
   <table class="navigate">
     <tr>
       <td align="left">
-        <a href="../site/posts.html">Posts</a>
+        <a href="posts.html">Posts</a>
       </td>
       <td align="center">
         <a href="https://www.github.com/dgoffredo">About</a>
