--- a/site/russia7.html
+++ b/site/russia7.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
 
-  <link rel="shortcut icon" type="image/x-icon" href="../site/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 
   
-  <link rel="stylesheet" type="text/css" media="(orientation: landscape)" href="../site/landscape.css" />
+  <link rel="stylesheet" type="text/css" media="(orientation: landscape)" href="landscape.css" />
 
   
-  <link rel="stylesheet" type="text/css" media="(orientation: portrait)" href="../site/portrait.css" />
+  <link rel="stylesheet" type="text/css" media="(orientation: portrait)" href="portrait.css" />
 
   <link rel="stylesheet" href="../highlightjs/styles/default.css" />
 
@@ -19,7 +19,7 @@
   <script>hljs.initHighlightingOnLoad();</script>
 
   
-  <script src="../site/linkify.js"> </script>
+  <script src="linkify.js"> </script>
 
   <title>Russia and Czechia, Day 7</title>
 </head>
@@ -30,7 +30,7 @@
   <table class="navigate">
     <tr>
       <td align="left">
-        <a href="../site/posts.html">Posts</a>
+        <a href="posts.html">Posts</a>
       </td>
       <td align="center">
         <a href="https://www.github.com/dgoffredo">About</a>
@@ -61,45 +61,45 @@ a cafe. Gregory noticed that the cafe sold health-related products and so
 took the opportunity to schmooze the cashier to set himself up as a
 supplier.</p>
 <p>Here is a picture of a church in the distance:</p>
-<p><img src="../site/russia7-13_small.jpg" alt="" /></p>
+<p><img src="russia7-13_small.jpg" alt="" /></p>
 <p>After Pasha was reverified as Russian, we went to the Victory Park, which
 commemorates the triumph of communism over fascism in World War II. It's a
 nice, big, open park near the center of Moscow, and has a bunch of
 impressive monuments. I was promised a tank:</p>
-<p><img src="../site/russia7-8_small.jpg" alt="" /></p>
+<p><img src="russia7-8_small.jpg" alt="" /></p>
 <p>There used to be more tanks in this park, but now they've presumably been
 moved to Ukraine. This tank, though, remained, along with this soldier:</p>
-<p><img src="../site/russia7-35_small.jpg" alt="" /></p>
+<p><img src="russia7-35_small.jpg" alt="" /></p>
 <p>I'm talking about the guy on the left.</p>
 <p>There's all kinds of stuff in the park. Here are a couple of things:</p>
-<p><img src="../site/russia7-16_small.jpg" alt="" /></p>
+<p><img src="russia7-16_small.jpg" alt="" /></p>
 <p>And another thing:</p>
-<p><img src="../site/russia7-21_small.jpg" alt="" /></p>
+<p><img src="russia7-21_small.jpg" alt="" /></p>
 <p>There was a certain manly gravitas about these depictions that surpass any
 war memorial I've seen. The tall thing above is interesting and recent:
 surrounding it (not shown) are the coats of arms of each of the major
 Russian cities, all cast in bronze. Circa 2016.</p>
-<p><img src="../site/russia7-31_small.jpg" alt="" /></p>
+<p><img src="russia7-31_small.jpg" alt="" /></p>
 <p>See? It's a generally nice park, and the weather before dusk was ideal. All
 sorts of kids and couples frolicking on roller skis and hover boards.</p>
-<p><img src="../site/russia7-36_small.jpg" alt="" /></p>
+<p><img src="russia7-36_small.jpg" alt="" /></p>
 <p>I'm on an airplane now. Remember World War II? Well apparently a lot of
 shitty stuff happened. Here's a memorial that freaked me right the fuck out.
 Take a look:</p>
-<p><img src="../site/russia7-5_small.jpg" alt="" /></p>
+<p><img src="russia7-5_small.jpg" alt="" /></p>
 <p>It's called "The Tragedy of Nations." To the left of those figures are
 discarded shoes and bones. In the middle are tombstones with inscriptions in
 several languages, none of which I can read:</p>
-<p><img src="../site/russia7-22_small.jpg" alt="" /></p>
+<p><img src="russia7-22_small.jpg" alt="" /></p>
 <p>Wakka wakka!</p>
 <p>The most prominent object is this tall thing:</p>
-<p><img src="../site/russia7-29_small.jpg" alt="" /></p>
+<p><img src="russia7-29_small.jpg" alt="" /></p>
 <p>At its base is a man on the horse BEHEADING THE NAZI DRAGON. Fuck you, Nazi
 dragon!</p>
-<p><img src="../site/russia7-4_small.jpg" alt="" /></p>
+<p><img src="russia7-4_small.jpg" alt="" /></p>
 <p>Eventually the sun began to set, as it does.</p>
-<p><img src="../site/russia7-41_small.jpg" alt="" /></p>
-<p><img src="../site/russia7-17_small.jpg" alt="" /></p>
+<p><img src="russia7-41_small.jpg" alt="" /></p>
+<p><img src="russia7-17_small.jpg" alt="" /></p>
 <p>So ended Friday.</p>
 <p>I just got to a hostel in Prague. I'm surprised to see two people sleeping.
 It's an eight person dorm. Jet lag? Alcohol? I'll inquire tomorrow. For now
@@ -117,39 +117,39 @@ take the wheel.</p>
 didn't take any pictures along the way, though, except for the folksy
 roadside tea and pirogi stand where we took our last break before reaching
 St. Petersburg.</p>
-<p><img src="../site/russia7-1_small.jpg" alt="" /></p>
+<p><img src="russia7-1_small.jpg" alt="" /></p>
 <p>There were several presumably stray dogs scrounging around for scraps. One,
 though, was simply curled up in a sunny spot on the ground. I don't have a
 picture, but Pasha and I agreed that this was a most cat-like dog and most
 likely the local hegemon.</p>
 <p>I liked the view behind that stand, too.</p>
-<p><img src="../site/russia7-42_small.jpg" alt="" /></p>
+<p><img src="russia7-42_small.jpg" alt="" /></p>
 <p>If you like the lighting in that picture, it means that you have good taste.</p>
 <p>Finally we arrived in St. Petersburg. It was a quick homemade dinner and
 then straight to bed. The next day we traveled into the city center:</p>
-<p><img src="../site/russia7-26_small.jpg" alt="" /></p>
+<p><img src="russia7-26_small.jpg" alt="" /></p>
 <p>Pasha agreed that St. Petersburg looks "more European." This sort of thing
 reminds me of Stockholm (I think it's the way the lamps hang between the
 buildings).</p>
 <p>St. Petersburg has canals</p>
-<p><img src="../site/russia7-3_small.jpg" alt="" /></p>
+<p><img src="russia7-3_small.jpg" alt="" /></p>
 <p>and fighter jets</p>
-<p><img src="../site/russia7-39_small.jpg" alt="" /></p>
+<p><img src="russia7-39_small.jpg" alt="" /></p>
 <p>and, most of all, churches:</p>
-<p><img src="../site/russia7-30_small.jpg" alt="" /></p>
+<p><img src="russia7-30_small.jpg" alt="" /></p>
 <p>But these aren't your frumpy American protestant churches. No, before the
 revolution, the Russian orthodoxy was nearly synonymous with the ruling
 czar, and thus with the disproportionately focused wealth of the entire
 state. Check this out:</p>
-<p><img src="../site/russia7-6_small.jpg" alt="" /></p>
-<p><img src="../site/russia7-7_small.jpg" alt="" /></p>
-<p><img src="../site/russia7-25_small.jpg" alt="" /></p>
+<p><img src="russia7-6_small.jpg" alt="" /></p>
+<p><img src="russia7-7_small.jpg" alt="" /></p>
+<p><img src="russia7-25_small.jpg" alt="" /></p>
 <p>Church stop number one included a mass complete with holy water in the face.
 Church stop number two included an English audio tour.</p>
 <p>Then we went to a palace (right).</p>
-<p><img src="../site/russia7-14_small.jpg" alt="" /></p>
+<p><img src="russia7-14_small.jpg" alt="" /></p>
 <p>Next to the palace is a phallus:</p>
-<p><img src="../site/russia7-9_small.jpg" alt="" /></p>
+<p><img src="russia7-9_small.jpg" alt="" /></p>
 <p>At least I was taller than the soldier.</p>
 <p>Saturday also happened to be Gregory's fifty-seventh birthday, which I think
 in part explains why Vladimir came along. We celebrated over dinner back at
@@ -173,8 +173,8 @@ this an editing room resequencing.</p>
 former Summer palace of the aristocratic overlords that sits in a large park
 that stretches to a bay, across which you can see St. Petersburg. If you can
 see really well, then there's also Finland.</p>
-<p><img src="../site/russia7-24_small.jpg" alt="" /></p>
-<p><img src="../site/russia7-12_small.jpg" alt="" /></p>
+<p><img src="russia7-24_small.jpg" alt="" /></p>
+<p><img src="russia7-12_small.jpg" alt="" /></p>
 <p>The girl on the right is photographing herself. I asked whether she'd like
 me to take a picture for her instead, but she was totally not into it. Fine,
 take your own pictures. This is not my caring face.</p>
@@ -183,9 +183,9 @@ graciously offered me to supplement my Moscow clothes. It was much colder in
 St. Petersburg, and windy and wet.</p>
 <p>Running from the palatial fountain all the way to the bay is this canal
 (viewed from the bay side):</p>
-<p><img src="../site/russia7-11_small.jpg" alt="" /></p>
+<p><img src="russia7-11_small.jpg" alt="" /></p>
 <p>Here is the water:</p>
-<p><img src="../site/russia7-38_small.jpg" alt="" /></p>
+<p><img src="russia7-38_small.jpg" alt="" /></p>
 <p>Let's be honest, though. You didn't come here for palaces. You came here for
 churches. So, we visited another, larger, church. This one was built just at
 the beginning of the twentieth century, and has inscribed within it in stone
@@ -197,37 +197,37 @@ in the chorus, facing away from the center of church so that you heard
 primarily the echo of their voices (I think it's called "reverb"). I was
 impressed by the music, at least as impressed as one can be about such
 music. The church is gorgeous:</p>
-<p><img src="../site/russia7-37_small.jpg" alt="" /></p>
-<p><img src="../site/russia7-10_small.jpg" alt="" /></p>
-<p><img src="../site/russia7-33_small.jpg" alt="" /></p>
+<p><img src="russia7-37_small.jpg" alt="" /></p>
+<p><img src="russia7-10_small.jpg" alt="" /></p>
+<p><img src="russia7-33_small.jpg" alt="" /></p>
 <p>Hey look, it's Jesus. Here's a low resolution panoramic shot:</p>
-<p><img src="../site/russia7-28_small.jpg" alt="" /></p>
+<p><img src="russia7-28_small.jpg" alt="" /></p>
 <p>Done? No, we're not done. We managed to squeeze in a bonus tour this
 morning. The tour was in Russian, so I have only a vague idea what was going
 on, but I took some pictures. There were rabbits:</p>
-<p><img src="../site/russia7-18_small.jpg" alt="" /></p>
+<p><img src="russia7-18_small.jpg" alt="" /></p>
 <p>and a river:</p>
-<p><img src="../site/russia7-34_small.jpg" alt="" /></p>
+<p><img src="russia7-34_small.jpg" alt="" /></p>
 <p>and a heavily fortified... fort:</p>
-<p><img src="../site/russia7-23_small.jpg" alt="" /></p>
+<p><img src="russia7-23_small.jpg" alt="" /></p>
 <p>a couple of pretty buildings:</p>
-<p><img src="../site/russia7-19_small.jpg" alt="" /></p>
-<p><img src="../site/russia7-32_small.jpg" alt="" /></p>
+<p><img src="russia7-19_small.jpg" alt="" /></p>
+<p><img src="russia7-32_small.jpg" alt="" /></p>
 <p>and... can you guess it? A church! This one has famous dead people in it.</p>
-<p><img src="../site/russia7-20_small.jpg" alt="" /></p>
-<p><img src="../site/russia7-2_small.jpg" alt="" /></p>
-<p><img src="../site/russia7-15_small.jpg" alt="" /></p>
-<p><img src="../site/russia7-40_small.jpg" alt="" /></p>
-<p><img src="../site/russia7-27_small.jpg" alt="" /></p>
+<p><img src="russia7-20_small.jpg" alt="" /></p>
+<p><img src="russia7-2_small.jpg" alt="" /></p>
+<p><img src="russia7-15_small.jpg" alt="" /></p>
+<p><img src="russia7-40_small.jpg" alt="" /></p>
+<p><img src="russia7-27_small.jpg" alt="" /></p>
 <p>That's enough for now. It's almost 11 PM here, and I think I ought to venture
 out in search of food before bed. Solo in Prague!</p>
 <table class="series">
   <tr><th colspan="4">Russia and Czechia</th></tr>
   <tr>
-    <td><a href="../site/russia1.html">Day 3</a></td>
-    <td><a href="../site/russia2.html">Day 4</a></td>
+    <td><a href="russia1.html">Day 3</a></td>
+    <td><a href="russia2.html">Day 4</a></td>
     <td>Day 7</td>
-    <td><a href="../site/russia10.html">Day 10</a></td>
+    <td><a href="russia10.html">Day 10</a></td>
   </tr>
 </table>
 
@@ -235,7 +235,7 @@ out in search of food before bed. Solo in Prague!</p>
   <table class="navigate">
     <tr>
       <td align="left">
-        <a href="../site/posts.html">Posts</a>
+        <a href="posts.html">Posts</a>
       </td>
       <td align="center">
         <a href="https://www.github.com/dgoffredo">About</a>
