--- a/site/break-cycles.html
+++ b/site/break-cycles.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
 
-  <link rel="shortcut icon" type="image/x-icon" href="../site/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 
   
-  <link rel="stylesheet" type="text/css" media="(orientation: landscape)" href="../site/landscape.css" />
+  <link rel="stylesheet" type="text/css" media="(orientation: landscape)" href="landscape.css" />
 
   
-  <link rel="stylesheet" type="text/css" media="(orientation: portrait)" href="../site/portrait.css" />
+  <link rel="stylesheet" type="text/css" media="(orientation: portrait)" href="portrait.css" />
 
   <link rel="stylesheet" href="../highlightjs/styles/default.css" />
 
@@ -19,7 +19,7 @@
   <script>hljs.initHighlightingOnLoad();</script>
 
   
-  <script src="../site/linkify.js"> </script>
+  <script src="linkify.js"> </script>
 
   <title>Code Generation and the Minimum Feedback Arc Set</title>
 </head>
@@ -30,7 +30,7 @@
   <table class="navigate">
     <tr>
       <td align="left">
-        <a href="../site/posts.html">Posts</a>
+        <a href="posts.html">Posts</a>
       </td>
       <td align="center">
         <a href="https://www.github.com/dgoffredo">About</a>
@@ -124,25 +124,25 @@ graph.</p>
 where <code>C</code> <em>depends upon</em> <code>B</code>. That is, <code>A</code> <em>depends upon</em> <code>B</code> if there exists a
 directed path from <code>A</code> to <code>B</code> in the dependency graph.</p>
 <p>The graph for the types in <code>(package basic ...)</code>, above, looks like this:</p>
-<p><img src="../site/just-value.dot.png" alt="dependency graph of &quot;Value&quot;" /></p>
+<p><img src="just-value.dot.png" alt="dependency graph of &quot;Value&quot;" /></p>
 <p>It has one vertex and one edge, from <code>Value</code> to itself: because (before our
 modification) <code>Value</code> <em>contains</em> <code>Value</code>. Our modification, though, creates
 a level of indirection: replacing <code>Value</code> with <code>Allocated&lt;Value&gt;</code> within the
 class definition removes the one edge in the graph, since <code>Value</code> no longer
 contains <code>Value</code>:</p>
-<p><img src="../site/bare-value.dot.png" alt="no more cycle" /></p>
+<p><img src="bare-value.dot.png" alt="no more cycle" /></p>
 <p>A cycle involving only one vertex is not very interesting. But suppose the
 dependency graph looked like this instead:</p>
-<p><img src="../site/cyclic.dot.png" alt="a more complicated dependency graph" /></p>
+<p><img src="cyclic.dot.png" alt="a more complicated dependency graph" /></p>
 <p>How many cycles does that directed graph contain? I see two:</p>
-<div><img src="../site/cyclic.1.dot.png" /><img src="../site/cyclic.2.dot.png" /></div><p>As before, we wish to make this directed graph acyclic by removing edges, where
+<div><img src="cyclic.1.dot.png" /><img src="cyclic.2.dot.png" /></div><p>As before, we wish to make this directed graph acyclic by removing edges, where
 we remove an edge by replacing the appearance of a type <code>T</code> within a class
 definition with <code>Allocated&lt;T&gt;</code>.</p>
 <p>Which edges should be removed?</p>
 <p>Perhaps only because of the way the graph is drawn, I'm tempted to think of the
 vertex <code>D</code> as the "main" type in the schema, and that makes me want to remove
 the two edges inbound into it:</p>
-<div><img src="../site/cyclic.remove.1.dot.png" /><img src="../site/cyclic.remove.2.dot.png" /></div><p>The graph now has no cycles. In fact, it would be a tree were it not for <code>B</code>
+<div><img src="cyclic.remove.1.dot.png" /><img src="cyclic.remove.2.dot.png" /></div><p>The graph now has no cycles. In fact, it would be a tree were it not for <code>B</code>
 having two parents (<code>A</code> and <code>F</code>). Also, note that since this is a <em>directed</em>
 graph, the edge sequence <code>FA</code>, <code>AB</code>, <code>BF</code> is not a path, and thus not a
 cycle, because the edge between <code>B</code> and <code>F</code> goes from <code>F</code> to <code>B</code>, not the
@@ -151,10 +151,10 @@ other way around.</p>
 and <code>G</code> classes and replace all appearances of <code>D</code> with <code>Allocated&lt;D&gt;</code>.</p>
 <p>You might have noticed that there is another way we could have broken the
 cycles. Here's the original cyclic graph again:</p>
-<p><img src="../site/cyclic.dot.png" alt="a more complicated dependency graph" /></p>
+<p><img src="cyclic.dot.png" alt="a more complicated dependency graph" /></p>
 <p>Both cycles share an edge, <code>DF</code>, and removing just that one breaks both
 cycles:</p>
-<div><img src="../site/cyclic.remove.3.dot.png" /><img src="../site/cyclic.remove.4.dot.png" /></div><p>Now graphviz wants to put <code>F</code> on top, interesting.</p>
+<div><img src="cyclic.remove.3.dot.png" /><img src="cyclic.remove.4.dot.png" /></div><p>Now graphviz wants to put <code>F</code> on top, interesting.</p>
 <h2 id="tradeoffs">Trade-offs</h2>
 <p>What's the difference between the two de-cyclings demonstrated above? My first
 thought was that less is more, and so removing the cycles by adding only one
@@ -184,7 +184,7 @@ we decide which edges to remove from our cyclic graphs?</p>
 be referred to only by <code>Allocated&lt;T&gt;</code>." This makes certain that all cycles are
 removed, but potentially introduces many more <code>Allocated&lt;T&gt;</code> than necessary.</p>
 <p>In the previous example, it would mean removing five edges instead of one:</p>
-<div><img src="../site/cyclic.remove.5.dot.png" /><img src="../site/cyclic.remove.6.dot.png" /></div><p>Also, if there were edges coming in from other vertices into any of the vertices
+<div><img src="cyclic.remove.5.dot.png" /><img src="cyclic.remove.6.dot.png" /></div><p>Also, if there were edges coming in from other vertices into any of the vertices
 <code>A</code>, <code>D</code>, <code>F</code>, or <code>G</code>, those edges too would be removed, even though they aren't
 part of either cycle.</p>
 <p>It seems a waste, but on the other hand, maybe it's simple to implement:
@@ -195,7 +195,7 @@ cycles in a directed graph efficiently is <a href="https://blog.mister-muffin.de
 A <a href="https://en.wikipedia.org/wiki/Complete_graph">complete directed graph</a> having <var>n</var> vertices and
 <var>~n<sup>2</sup></var> edges can have up to <a href="https://www.cs.tufts.edu/comp/150GA/homeworks/hw1/Johnson%2075.PDF">this many</a> (simple)
 cycles:</p>
-<p><img src="../site/max-cycles.dot.png" alt="maximum number of cycles in complete digraph with n vertices" /></p>
+<p><img src="max-cycles.png" alt="maximum number of cycles in complete digraph with n vertices" /></p>
 <p>That's way more than <var>2<sup>n</sup></var>, so at worst we're totally
 screwed.</p>
 <p>Fortunately, no schema describing C++ classes is going to have a <em>complete</em>
@@ -246,20 +246,20 @@ feedback arc set.</p>
 <h3 id="pictures">Pictures</h3>
 <p>Here is an animated example using the same graph we've been using.</p>
 <p>Start at vertex <code>A</code> and do a depth-first traversal until you run into trouble:</p>
-<p><img src="../site/graph-animation-1.gif" alt="" /></p>
+<p><img src="graph-animation-1.gif" alt="" /></p>
 <p>In these animations, the purple (pink) node is the one from which we started,
 blue indicates the edge or vertex we're currently examining, and gray indicates
 an edge or vertex that we've already visited. Red marks edges that lead to a
 vertex in the current set <code>s</code> of ancestors.</p>
 <p>We detected that the edge <code>FA</code> creates a cycle, so we remember it, remove it,
 and continue:</p>
-<p><img src="../site/graph-animation-2.gif" alt="" /></p>
+<p><img src="graph-animation-2.gif" alt="" /></p>
 <p>We detected that the edge <code>GD</code> creates a cycle, and so we did as before. Now
 there's little left to do, from <code>A</code>'s point of view:</p>
-<p><img src="../site/graph-animation-3.gif" alt="" /></p>
+<p><img src="graph-animation-3.gif" alt="" /></p>
 <p>Thus the following two edges were removed to make the graph acyclic, starting
 from <code>A</code>:</p>
-<p><img src="../site/edges-removed-a.dot.png" alt="" /></p>
+<p><img src="edges-removed-a.png" alt="" /></p>
 <p>Next we do the whole thing over, but this time starting from <code>B</code>. Starting from
 <code>B</code> or <code>C</code> is not very interesting, since they're both leaves. The algorithm,
 having run out of tree at <code>B</code> and noticing that there were still unvisited
@@ -267,9 +267,9 @@ edges, would proceed starting from another vertex, say, <code>A</code>. But we a
 <code>A</code>. So this adds no new information.</p>
 <p>The next interesting vertex to start from, alphabetically, is <code>D</code>. Here is the
 complete animation starting from <code>D</code>, and then the resulting edges removed:</p>
-<div><img src="../site/graph-animation-4.gif" /><img src="../site/edges-removed-d.png" /></div><p>As you can see, one of the edges is different than before.</p>
+<div><img src="graph-animation-4.gif" /><img src="edges-removed-d.png" /></div><p>As you can see, one of the edges is different than before.</p>
 <p>The punchline is the result starting from <code>F</code>. Here it is:</p>
-<div><img src="../site/graph-animation-5.gif" /><img src="../site/edges-removed-f.png" /></div><p>So we discover that the minimum feedback arc set of this directed graph is
+<div><img src="graph-animation-5.gif" /><img src="edges-removed-f.png" /></div><p>So we discover that the minimum feedback arc set of this directed graph is
 <code>{DF}</code>.</p>
 <h3 id="correctness">Correctness</h3>
 <p>As I said before, this algorithm can't be right. What might help is a
@@ -284,7 +284,7 @@ number of edges.</p>
   <table class="navigate">
     <tr>
       <td align="left">
-        <a href="../site/posts.html">Posts</a>
+        <a href="posts.html">Posts</a>
       </td>
       <td align="center">
         <a href="https://www.github.com/dgoffredo">About</a>
