--- a/site/europe13.html
+++ b/site/europe13.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
 
-  <link rel="shortcut icon" type="image/x-icon" href="../site/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 
   
-  <link rel="stylesheet" type="text/css" media="(orientation: landscape)" href="../site/landscape.css" />
+  <link rel="stylesheet" type="text/css" media="(orientation: landscape)" href="landscape.css" />
 
   
-  <link rel="stylesheet" type="text/css" media="(orientation: portrait)" href="../site/portrait.css" />
+  <link rel="stylesheet" type="text/css" media="(orientation: portrait)" href="portrait.css" />
 
   <link rel="stylesheet" href="../highlightjs/styles/default.css" />
 
@@ -19,7 +19,7 @@
   <script>hljs.initHighlightingOnLoad();</script>
 
   
-  <script src="../site/linkify.js"> </script>
+  <script src="linkify.js"> </script>
 
   <title>Europe, Day 13</title>
 </head>
@@ -30,7 +30,7 @@
   <table class="navigate">
     <tr>
       <td align="left">
-        <a href="../site/posts.html">Posts</a>
+        <a href="posts.html">Posts</a>
       </td>
       <td align="center">
         <a href="https://www.github.com/dgoffredo">About</a>
@@ -53,52 +53,52 @@ Fortunately, in addition to being an airplane, the vessel will be also a
 time machine, so I'll arrive in New York only two hours after departing.</p>
 <p>We stayed just outside of central Stockholm at a friend's apartment, which
 has a balcony whose view is this:</p>
-<p><img src="../site/europe13-1_small.jpg" alt="" /></p>
+<p><img src="europe13-1_small.jpg" alt="" /></p>
 <p>Our host looks like this:</p>
-<p><img src="../site/europe13-3_small.jpg" alt="" /></p>
+<p><img src="europe13-3_small.jpg" alt="" /></p>
 <p>The first full day he took us around in his car to see some scenic areas of
 Stockholm:</p>
-<p><img src="../site/europe13-2_small.jpg" alt="" /></p>
+<p><img src="europe13-2_small.jpg" alt="" /></p>
 <p>and we went to a museum about this old boat they found buried in the ocean
 and managed to restore with 98% of the original material. There were floors
 in the museum on things like the curing process used in the waterlogged
 wood, the skeletons of the crew, and a bunch of other interesting stuff that
 you wouldn't expect to find explained in such detail. I rather liked it. The
 boat itself is gigantic:</p>
-<p><img src="../site/europe13-5_small.jpg" alt="" /></p>
+<p><img src="europe13-5_small.jpg" alt="" /></p>
 <p>The following day we drove out to a boat to take a ferry to one of
 Stockholm's many islands. It was a nice ride:</p>
-<p><img src="../site/europe13-4_small.jpg" alt="" /></p>
-<p><img src="../site/europe13-7_small.jpg" alt="" /></p>
+<p><img src="europe13-4_small.jpg" alt="" /></p>
+<p><img src="europe13-7_small.jpg" alt="" /></p>
 <p>Once on the island, we took a cable barge to a smaller island where there's
 an old fort:</p>
-<p><img src="../site/europe13-6_small.jpg" alt="" /></p>
-<p><img src="../site/europe13-9_small.jpg" alt="" /></p>
-<p><img src="../site/europe13-8_small.jpg" alt="" /></p>
-<p><img src="../site/europe13-12_small.jpg" alt="" /></p>
-<p><img src="../site/europe13-10_small.jpg" alt="" /></p>
-<p><img src="../site/europe13-11_small.jpg" alt="" /></p>
-<p><img src="../site/europe13-13_small.jpg" alt="" /></p>
+<p><img src="europe13-6_small.jpg" alt="" /></p>
+<p><img src="europe13-9_small.jpg" alt="" /></p>
+<p><img src="europe13-8_small.jpg" alt="" /></p>
+<p><img src="europe13-12_small.jpg" alt="" /></p>
+<p><img src="europe13-10_small.jpg" alt="" /></p>
+<p><img src="europe13-11_small.jpg" alt="" /></p>
+<p><img src="europe13-13_small.jpg" alt="" /></p>
 <p>Hobbits live there:</p>
-<p><img src="../site/europe13-14_small.jpg" alt="" /></p>
+<p><img src="europe13-14_small.jpg" alt="" /></p>
 <p>Then we took the ferry back around sundown:</p>
-<p><img src="../site/europe13-15_small.jpg" alt="" /></p>
+<p><img src="europe13-15_small.jpg" alt="" /></p>
 <p>and headed into a pub in the city center to watch the "Sweden versus Europe"
 world hockey semi-final. Sweden lost. C'est la vie. The city looks nice at
 dusk:</p>
-<p><img src="../site/europe13-16_small.jpg" alt="" /></p>
+<p><img src="europe13-16_small.jpg" alt="" /></p>
 <p>and they have balloons:</p>
-<p><img src="../site/europe13-17_small.jpg" alt="" /></p>
+<p><img src="europe13-17_small.jpg" alt="" /></p>
 <p>I have so far resisted the cesspool of disease otherwise known as Vineet,
 but we'll see how I fare waking up for work tomorrow. Ciao.</p>
 <table class="series">
   <tr><th colspan="6">Europe</th></tr>
   <tr>
-    <td><a href="../site/europe1.html">Day 1</a></td>
-    <td><a href="../site/europe2.html">Day 2</a></td>
-    <td><a href="../site/europe7.html">Day 7</a></td>
-    <td><a href="../site/europe8.html">Day 8</a></td>
-    <td><a href="../site/europe10.html">Day 10</a></td>
+    <td><a href="europe1.html">Day 1</a></td>
+    <td><a href="europe2.html">Day 2</a></td>
+    <td><a href="europe7.html">Day 7</a></td>
+    <td><a href="europe8.html">Day 8</a></td>
+    <td><a href="europe10.html">Day 10</a></td>
     <td>Day 13</td>
   </tr>
 </table>
@@ -107,7 +107,7 @@ but we'll see how I fare waking up for work tomorrow. Ciao.</p>
   <table class="navigate">
     <tr>
       <td align="left">
-        <a href="../site/posts.html">Posts</a>
+        <a href="posts.html">Posts</a>
       </td>
       <td align="center">
         <a href="https://www.github.com/dgoffredo">About</a>
