--- a/site/europe8.html
+++ b/site/europe8.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
 
-  <link rel="shortcut icon" type="image/x-icon" href="../site/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 
   
-  <link rel="stylesheet" type="text/css" media="(orientation: landscape)" href="../site/landscape.css" />
+  <link rel="stylesheet" type="text/css" media="(orientation: landscape)" href="landscape.css" />
 
   
-  <link rel="stylesheet" type="text/css" media="(orientation: portrait)" href="../site/portrait.css" />
+  <link rel="stylesheet" type="text/css" media="(orientation: portrait)" href="portrait.css" />
 
   <link rel="stylesheet" href="../highlightjs/styles/default.css" />
 
@@ -19,7 +19,7 @@
   <script>hljs.initHighlightingOnLoad();</script>
 
   
-  <script src="../site/linkify.js"> </script>
+  <script src="linkify.js"> </script>
 
   <title>Europe, Day 8</title>
 </head>
@@ -30,7 +30,7 @@
   <table class="navigate">
     <tr>
       <td align="left">
-        <a href="../site/posts.html">Posts</a>
+        <a href="posts.html">Posts</a>
       </td>
       <td align="center">
         <a href="https://www.github.com/dgoffredo">About</a>
@@ -65,15 +65,15 @@ everything there is to know about the history of Europe, so that was good.
 The ride was nearly three hours, so you really get to see a lot of the
 sights of the city this way, as he later mapped out for us in green and blue
 highlighter:</p>
-<p><img src="../site/europe8-001_small.jpg" alt="" /></p>
+<p><img src="europe8-001_small.jpg" alt="" /></p>
 <p>This would have been a good thing to do the first day, but we didn’t know to
 do it the first day. Anyway, there were many pretty pictures to take.</p>
 <p>There was guy on horse:</p>
-<p><img src="../site/europe8-002_small.jpg" alt="" /></p>
+<p><img src="europe8-002_small.jpg" alt="" /></p>
 <p>A palace:</p>
-<p><img src="../site/europe8-003_small.jpg" alt="" /></p>
+<p><img src="europe8-003_small.jpg" alt="" /></p>
 <p>A cathedral:</p>
-<p><img src="../site/europe8-004_small.jpg" alt="" /></p>
+<p><img src="europe8-004_small.jpg" alt="" /></p>
 <p>Our guide (now I remember his name – Casper. Casper the friendly bicycle
 tour guide) was not impressed by the stained glass on the cathedral. Well,
 you try staining glass and we’ll see how it comes out.</p>
@@ -81,19 +81,19 @@ you try staining glass and we’ll see how it comes out.</p>
 six centuries. For example, that palace two above was designed by the French
 (baroque style, if you’re into that), built by an Italian king, in Spain.</p>
 <p>Then there’s this big plaza:</p>
-<p><img src="../site/europe8-005_small.jpg" alt="" /></p>
+<p><img src="europe8-005_small.jpg" alt="" /></p>
 <p>With nice arched entrances:</p>
-<p><img src="../site/europe8-006_small.jpg" alt="" /></p>
+<p><img src="europe8-006_small.jpg" alt="" /></p>
 <p>Oh, and Spain has no government. They can’t decide who’s in charge so
 they’re just like fuck it we’ll do it later. There is still a congressional
 building, though, just for us:</p>
-<p><img src="../site/europe8-007_small.jpg" alt="" /></p>
+<p><img src="europe8-007_small.jpg" alt="" /></p>
 <p>There were plenty of other pretty buildings, but also a vertical garden:</p>
-<p><img src="../site/europe8-008_small.jpg" alt="" /></p>
+<p><img src="europe8-008_small.jpg" alt="" /></p>
 <p>A horizontal garden:</p>
-<p><img src="../site/europe8-009_small.jpg" alt="" /></p>
+<p><img src="europe8-009_small.jpg" alt="" /></p>
 <p>And trees beginning to change color:</p>
-<p><img src="../site/europe8-010_small.jpg" alt="" /></p>
+<p><img src="europe8-010_small.jpg" alt="" /></p>
 <p>Part of the trouble of learning the history of buildings in Europe is that
 the stories mostly fit the same template. At one point, Vineet and I were
 walking into some historical square, and there was a brass plaque on the
@@ -109,10 +109,10 @@ impressive plaque on it. Many of the prettiest buildings seem to share this
 story. I have no idea what the plaque says.
 <em>[2020 note: I'm not confident that conversation actually occurred]</em></p>
 <p>Check out this one:</p>
-<p><img src="../site/europe8-011_small.jpg" alt="" /></p>
+<p><img src="europe8-011_small.jpg" alt="" /></p>
 <p>Some guy lived or died there. Or is buried there. Or some combination.</p>
 <p>Here’s the town hall:</p>
-<p><img src="../site/europe8-012_small.jpg" alt="" /></p>
+<p><img src="europe8-012_small.jpg" alt="" /></p>
 <p>Refugees are welcome into this building. I did not see such a banner at
 immigration, though. Check out the statues. They are actually statesmen
 frozen in carbonite – according to the prophecy, they will come back to life
@@ -121,24 +121,24 @@ whichever happens first. Some were first transformed into giant cats by the
 Witch King of Leon.</p>
 <p>That’s all solid marble. Don’t make them like they used to.</p>
 <p>There is a colossal tribute to Columbus discovering the New World:</p>
-<p><img src="../site/europe8-013_small.jpg" alt="" /></p>
-<p><img src="../site/europe8-014_small.jpg" alt="" /></p>
-<p><img src="../site/europe8-015.gif" alt="" /></p>
+<p><img src="europe8-013_small.jpg" alt="" /></p>
+<p><img src="europe8-014_small.jpg" alt="" /></p>
+<p><img src="europe8-015.gif" alt="" /></p>
 <p>And finally, since you asked, another guy on a horse:</p>
-<p><img src="../site/europe8-016_small.jpg" alt="" /></p>
+<p><img src="europe8-016_small.jpg" alt="" /></p>
 <p>Had your fill? Granted, Madrid has nothing on Iceland in the horse
 department, but they make a good effort:</p>
-<p><img src="../site/europe8-017_small.jpg" alt="" /></p>
+<p><img src="europe8-017_small.jpg" alt="" /></p>
 <p>Tomorrow it’s off to Barcelona. Buenas noches.</p>
 <table class="series">
   <tr><th colspan="6">Europe</th></tr>
   <tr>
-    <td><a href="../site/europe1.html">Day 1</a></td>
-    <td><a href="../site/europe2.html">Day 2</a></td>
-    <td><a href="../site/europe7.html">Day 7</a></td>
+    <td><a href="europe1.html">Day 1</a></td>
+    <td><a href="europe2.html">Day 2</a></td>
+    <td><a href="europe7.html">Day 7</a></td>
     <td>Day 8</td>
-    <td><a href="../site/europe10.html">Day 10</a></td>
-    <td><a href="../site/europe13.html">Day 13</a></td>
+    <td><a href="europe10.html">Day 10</a></td>
+    <td><a href="europe13.html">Day 13</a></td>
   </tr>
 </table>
 
@@ -146,7 +146,7 @@ department, but they make a good effort:</p>
   <table class="navigate">
     <tr>
       <td align="left">
-        <a href="../site/posts.html">Posts</a>
+        <a href="posts.html">Posts</a>
       </td>
       <td align="center">
         <a href="https://www.github.com/dgoffredo">About</a>
