--- a/site/india4.html
+++ b/site/india4.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
 
-  <link rel="shortcut icon" type="image/x-icon" href="../site/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 
   
-  <link rel="stylesheet" type="text/css" media="(orientation: landscape)" href="../site/landscape.css" />
+  <link rel="stylesheet" type="text/css" media="(orientation: landscape)" href="landscape.css" />
 
   
-  <link rel="stylesheet" type="text/css" media="(orientation: portrait)" href="../site/portrait.css" />
+  <link rel="stylesheet" type="text/css" media="(orientation: portrait)" href="portrait.css" />
 
   <link rel="stylesheet" href="../highlightjs/styles/default.css" />
 
@@ -19,7 +19,7 @@
   <script>hljs.initHighlightingOnLoad();</script>
 
   
-  <script src="../site/linkify.js"> </script>
+  <script src="linkify.js"> </script>
 
   <title>India, Day 10</title>
 </head>
@@ -30,7 +30,7 @@
   <table class="navigate">
     <tr>
       <td align="left">
-        <a href="../site/posts.html">Posts</a>
+        <a href="posts.html">Posts</a>
       </td>
       <td align="center">
         <a href="https://www.github.com/dgoffredo">About</a>
@@ -48,59 +48,59 @@
 <div class="table-of-contents"><ul><li><a href="#india_day_10">India, Day 10</a></li></ul></div>
 
 <h1 id="india_day_10">India, Day 10</h1>
-<p><img src="../site/india4_23_small.jpg" alt="" /></p>
+<p><img src="india4_23_small.jpg" alt="" /></p>
 <p>He didn't get left behind, after all.  It should have occurred to me earlier
 to search for the marble elephant in a marble room.</p>
-<p><img src="../site/india4_26_small.jpg" alt="" /></p>
+<p><img src="india4_26_small.jpg" alt="" /></p>
 <p>Asha and Vineet are now married.  They were already married, but now they still
 are.</p>
 <p>Here was my view of the beginning of the ceremony:</p>
-<p><img src="../site/india4_34_small.jpg" alt="" /></p>
+<p><img src="india4_34_small.jpg" alt="" /></p>
 <p>After a while, the staff began bringing in chairs, so by remaining standing I
 got a better view of what was going on.  Asha and Vineet were sitting on a
 bench opposite a small fire.  On the other side was a priest with a microphone.</p>
 <video controls="true" width="700">
-  <source src="../site/havan.mp4" type="video/mp4" />
+  <source src="havan.mp4" type="video/mp4" />
 </video><p>I should mention that the wedding couple are not visible in the video (they're
 off to the left), and that the shaking image is due to coffee.</p>
 <p>This ritual likely had a deep significance for a few attending, but not for the
 bride or groom.</p>
-<p><img src="../site/india4_35_small.jpg" alt="" /></p>
+<p><img src="india4_35_small.jpg" alt="" /></p>
 <p>At Indian weddings, women have <a href="https://en.wikipedia.org/wiki/Henna">henna</a> drawn on their bodies in a style
 known as <a href="https://en.wikipedia.org/wiki/Mehndi">mehndi</a>.  Here is Asha the bride:</p>
-<p><img src="../site/india4_17_small.jpg" alt="" /></p>
+<p><img src="india4_17_small.jpg" alt="" /></p>
 <p>Here is Asha the cat:</p>
-<p><img src="../site/asha3_small.jpg" alt="" /></p>
+<p><img src="asha3_small.jpg" alt="" /></p>
 <p>The mehndi artist applies the henna as a paste, carefully decorating the skin
 as a pastry chef would.</p>
 <p>Immediately after, it looks like this:</p>
-<p><img src="../site/india4_7_small.jpg" alt="" /></p>
-<p><img src="../site/india4_8_small.jpg" alt="" /></p>
+<p><img src="india4_7_small.jpg" alt="" /></p>
+<p><img src="india4_8_small.jpg" alt="" /></p>
 <p>The women then are unable to use their hands for well over an hour.  It was
 hilarious.</p>
 <p>After the henna has dried and been scratched off onto a torn piece of
 newspaper, the stained skin starts to gradually darken from a iodine orange to
 a deep red brown.  Here's Andrea a day after:</p>
-<p><img src="../site/india4_37_small.jpg" alt="" /></p>
-<p><img src="../site/india4_38_small.jpg" alt="" /></p>
+<p><img src="india4_37_small.jpg" alt="" /></p>
+<p><img src="india4_38_small.jpg" alt="" /></p>
 <p>Speaking of Andrea, check her out.  She borrowed this <a href="https://en.wikipedia.org/wiki/Sari">sari (saree)</a> from
 the groom's mother.</p>
-<p><img src="../site/india4_29_small.jpg" alt="" /></p>
+<p><img src="india4_29_small.jpg" alt="" /></p>
 <p>I was wearing my blue suit.  You've already seen it.  If you really want to
 see more, then I refer you to any of the ten million photographers hired for
 the wedding.</p>
 <p>Oh, I just remembered the band that played during the first event.  They were
 told to turn down on at least two separate occasions, but the Force was strong
 with them.</p>
-<p><img src="../site/india4_21_small.jpg" alt="" /></p>
+<p><img src="india4_21_small.jpg" alt="" /></p>
 <p>Later that evening, a different band played Hotel California.  The guitar solo
 was on point.  The vocals were better than I could do.</p>
 <p>Here's what you can see from my room:</p>
-<p><img src="../site/india4_2_small.jpg" alt="" /></p>
+<p><img src="india4_2_small.jpg" alt="" /></p>
 <p>and here's what you can see from the pool:</p>
-<p><img src="../site/india4_22_small.jpg" alt="" /></p>
+<p><img src="india4_22_small.jpg" alt="" /></p>
 <p>and that's about all I shot.</p>
-<p><img src="../site/hindustan_small.jpg" alt="" /></p>
+<p><img src="hindustan_small.jpg" alt="" /></p>
 <p>Reading the complimentary Hindustan Times this morning over breakfast, I was
 surprised to see no fewer than three rape-related articles.  Now, I know that
 newspapers tend to focus on the morbid and sensational, and that 1.3 billion
@@ -114,20 +114,20 @@ people live in India, but still:</p>
 involving abuse, rape, and incest feature prominently. I'm not sure what all
 this is trying to tell me.</p>
 <p>Here is a marble elephant.</p>
-<p><img src="../site/india4_24_small.jpg" alt="" /></p>
+<p><img src="india4_24_small.jpg" alt="" /></p>
 <p>At eight o'clock I'll be meeting a new friend for dinner and then getting up
 rather early tomorrow for a flight to <a href="https://en.wikipedia.org/wiki/Kerala">Kerala</a>, where the second half of
 this trip begins.
-<img style="width: 200px;" src="../site/hindi.png" /></p>
+<img style="width: 200px;" src="hindi.png" /></p>
 <table class="series">
   <tr><th colspan="6">India</th></tr>
   <tr>
-    <td><a href="../site/india1.html">Day 1</a></td>
-    <td><a href="../site/india2.html">Day 6</a></td>
-    <td><a href="../site/india3.html">Day 8</a></td>
+    <td><a href="india1.html">Day 1</a></td>
+    <td><a href="india2.html">Day 6</a></td>
+    <td><a href="india3.html">Day 8</a></td>
     <td>Day 10</td>
-    <td><a href="../site/india5.html">Day 13</a></td>
-    <td><a href="../site/india6.html">Day 15</a></td>
+    <td><a href="india5.html">Day 13</a></td>
+    <td><a href="india6.html">Day 15</a></td>
   </tr>
 </table>
 
@@ -135,7 +135,7 @@ this trip begins.
   <table class="navigate">
     <tr>
       <td align="left">
-        <a href="../site/posts.html">Posts</a>
+        <a href="posts.html">Posts</a>
       </td>
       <td align="center">
         <a href="https://www.github.com/dgoffredo">About</a>
