--- a/site/llama-json.html
+++ b/site/llama-json.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
 
-  <link rel="shortcut icon" type="image/x-icon" href="../site/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 
   
-  <link rel="stylesheet" type="text/css" media="(orientation: landscape)" href="../site/landscape.css" />
+  <link rel="stylesheet" type="text/css" media="(orientation: landscape)" href="landscape.css" />
 
   
-  <link rel="stylesheet" type="text/css" media="(orientation: portrait)" href="../site/portrait.css" />
+  <link rel="stylesheet" type="text/css" media="(orientation: portrait)" href="portrait.css" />
 
   <link rel="stylesheet" href="../highlightjs/styles/default.css" />
 
@@ -19,7 +19,7 @@
   <script>hljs.initHighlightingOnLoad();</script>
 
   
-  <script src="../site/linkify.js"> </script>
+  <script src="linkify.js"> </script>
 
   <title>Llama JSON</title>
 </head>
@@ -30,7 +30,7 @@
   <table class="navigate">
     <tr>
       <td align="left">
-        <a href="../site/posts.html">Posts</a>
+        <a href="posts.html">Posts</a>
       </td>
       <td align="center">
         <a href="https://www.github.com/dgoffredo">About</a>
@@ -48,7 +48,7 @@
 <div class="table-of-contents"><ul><li><a href="#llama_json">Llama JSON</a><ul><li><a href="#its_a_macro">It's a Macro</a></li><li><a href="#dealing_with_null">Dealing with null</a></li><li><a href="#distinguishing_arrays_from_objects">Distinguishing Arrays from Objects</a></li><li><a href="#empty_objects_and_arrays">Empty Objects and Arrays</a></li><li><a href="#numbers_and_jsonstringify">Numbers and JSON.stringify</a></li><li><a href="#helper_procedure">Helper Procedure</a></li><li><a href="#the_json_macro">The json Macro</a></li><li><a href="#example">Example</a></li></ul></li></ul></div>
 
 <h1 id="llama_json">Llama JSON</h1>
-<p><img src="../site/llama.jpg" alt="" /> <img src="../site/json.gif" alt="" /></p>
+<p><img src="llama.jpg" alt="" /> <img src="json.gif" alt="" /></p>
 <p>Playing with a <a href="https://github.com/dgoffredo/llama">pet project</a>, I noticed a relationship between
 <a href="https://en.wikipedia.org/wiki/S-expression">s-expressions</a> and <a href="https://en.wikipedia.org/wiki/JSON">JSON</a>.</p>
 <p>The following JSON is also valid <a href="https://github.com/dgoffredo/llama">Llama</a>:</p>
@@ -405,7 +405,7 @@ opening the <a href="https://github.com/dgoffredo/llama#using-the-playground">pl
   <table class="navigate">
     <tr>
       <td align="left">
-        <a href="../site/posts.html">Posts</a>
+        <a href="posts.html">Posts</a>
       </td>
       <td align="center">
         <a href="https://www.github.com/dgoffredo">About</a>
