--- a/site/mexico1.html
+++ b/site/mexico1.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
 
-  <link rel="shortcut icon" type="image/x-icon" href="../site/favicon.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 
   
-  <link rel="stylesheet" type="text/css" media="(orientation: landscape)" href="../site/landscape.css" />
+  <link rel="stylesheet" type="text/css" media="(orientation: landscape)" href="landscape.css" />
 
   
-  <link rel="stylesheet" type="text/css" media="(orientation: portrait)" href="../site/portrait.css" />
+  <link rel="stylesheet" type="text/css" media="(orientation: portrait)" href="portrait.css" />
 
   <link rel="stylesheet" href="../highlightjs/styles/default.css" />
 
@@ -19,7 +19,7 @@
   <script>hljs.initHighlightingOnLoad();</script>
 
   
-  <script src="../site/linkify.js"> </script>
+  <script src="linkify.js"> </script>
 
   <title>Mexico, Day 5</title>
 </head>
@@ -30,7 +30,7 @@
   <table class="navigate">
     <tr>
       <td align="left">
-        <a href="../site/posts.html">Posts</a>
+        <a href="posts.html">Posts</a>
       </td>
       <td align="center">
         <a href="https://www.github.com/dgoffredo">About</a>
@@ -48,7 +48,7 @@
 <div class="table-of-contents"><ul><li><a href="#mexico_day_5">Mexico, Day 5</a></li></ul></div>
 
 <h1 id="mexico_day_5">Mexico, Day 5</h1>
-<p><img src="../site/mexico_1_small.jpg" alt="" /></p>
+<p><img src="mexico_1_small.jpg" alt="" /></p>
 <p>An electric fence tops the walls surrounding my neighborhood.  Presumably
 this is to keep bad people out, but I can't leave unless the man at the gate
 allows it.  Then again, he is unarmed, and short, and friendly.</p>
@@ -60,13 +60,13 @@ my sunny three bedroom house inside the castle walls, occasionally venturing
 out to a restaurant or cafe. There's a big screen TV and a 1000-piece
 puzzle. I'm becoming fond of my morning ritual of coffee and computer in the
 backyard.</p>
-<p><img src="../site/mexico_2_small.jpg" alt="" /></p>
+<p><img src="mexico_2_small.jpg" alt="" /></p>
 <p>Bottled water is the way to go, but for making coffee you can get away with
 boiling the tap for a while.  Once the water cools, there's a slick of
 precipitated minerals on top, and it smells slightly of sulfur.  No wonder
 the coffee tasted bland; this morning I used bottled water and it was much
 improved.</p>
-<p><img src="../site/mexico_3_small.jpg" alt="" /></p>
+<p><img src="mexico_3_small.jpg" alt="" /></p>
 <p>I didn't realize until yesterday that Aguascalientes sits at an elevation of
 over 6000 feet (1888 meters).  I've been to Aspen before, where altitude
 sickness is unavoidable, whereas here I just felt a little winded and thirsty.</p>
@@ -86,15 +86,15 @@ eating food, basically. Welcome to Mexico.</p>
 recipe.  Then later we'll take a walk downtown.  Originally I planned to stay
 for a week or two, but now I'm staying for a month.  For $40 per day, where
 else would I be?  Hasta luego...</p>
-<p><img src="../site/mexico_4_small.jpg" alt="" /></p>
+<p><img src="mexico_4_small.jpg" alt="" /></p>
 <table class="series">
   <tr><th colspan="5">Mexico</th></tr>
   <tr>
     <td>Day 5</td>
-    <td><a href="../site/mexico2.html">Day 8</a></td>
-    <td><a href="../site/mexico3.html">Day 13</a></td>
-    <td><a href="../site/mexico4.html">Day 21</a></td>
-    <td><a href="../site/mexico5.html">Day 29</a></td>
+    <td><a href="mexico2.html">Day 8</a></td>
+    <td><a href="mexico3.html">Day 13</a></td>
+    <td><a href="mexico4.html">Day 21</a></td>
+    <td><a href="mexico5.html">Day 29</a></td>
   </tr>
 </table>
 
@@ -102,7 +102,7 @@ else would I be?  Hasta luego...</p>
   <table class="navigate">
     <tr>
       <td align="left">
-        <a href="../site/posts.html">Posts</a>
+        <a href="posts.html">Posts</a>
       </td>
       <td align="center">
         <a href="https://www.github.com/dgoffredo">About</a>
